# ascend_op_learning

./: CONTRIBUTING_EN.md  OWNERS  README.md
best_practices/contrib/part_detection/: README.md
cplusplus/: README.md  README_CN.md
cplusplus/common/: README.md  README_CN.md
cplusplus/common/presenteragent/: README_CN.md
cplusplus/contrib/Ascbot/: README.md  README_CN.md
cplusplus/contrib/HandWrite/: README_CN.md
cplusplus/contrib/TextRecognize/: README_CN.md
cplusplus/contrib/cartoonGAN_picture/: README_CN.md
cplusplus/contrib/gesturedetection/: README_CN.md
cplusplus/contrib/human_segmentation/: README_CN.md
cplusplus/environment/: environment_variable_configuration.md  environment_variable_configuration_CN.md
cplusplus/level1_single_api/: README.md  README_CN.md
cplusplus/level1_single_api/10_aoe_api/: CMakeLists.txt  main.cpp  readme.md
cplusplus/level1_single_api/1_acl/: README.md  README_CN.md
cplusplus/level1_single_api/3_ir/1_fuse_tile_concat_pass/: CMakeLists.txt  readme.md
cplusplus/level1_single_api/3_ir/1_fuse_tile_concat_pass/data/: tensorflow_generate.py  tf_forward.py
cplusplus/level1_single_api/3_ir/1_fuse_tile_concat_pass/src/: fuse_tile_concat_pass.cpp
cplusplus/level1_single_api/3_ir/3_modify_subgraph_pass/: CMakeLists.txt  readme.md
cplusplus/level1_single_api/3_ir/3_modify_subgraph_pass/data/: tf_forward.py
cplusplus/level1_single_api/3_ir/3_modify_subgraph_pass/src/: add_abs_node.hpp  modify_subgraph_pass_01.cpp  modify_subgraph_pass_02.cpp
cplusplus/level1_single_api/5_200dk_peripheral/: README.md
cplusplus/level2_simple_inference/: README.md
cplusplus/level2_simple_inference/0_data_process/: README.md  README_CN.md
cplusplus/level2_simple_inference/1_classification/: README.md  README_CN.md
cplusplus/level2_simple_inference/2_object_detection/: README.md  README_CN.md
cplusplus/level2_simple_inference/5_nlp/: README.md  README_CN.md
cplusplus/level2_simple_inference/6_other/: README.md  README_CN.md
cplusplus/level2_simple_inference/n_performance/: README.md
growthpath/: README_CN.md
growthpath/junior-level/: README_CN.md
growthpath/junior-level/1_overview_of_AscendCL/: README_CN.md
growthpath/junior-level/2_quick_start/: README_CN.md
growthpath/junior-level/3_model_conversion/: README_CN.md
growthpath/junior-level/4_model_processing_module/: README_CN.md
growthpath/junior-level/5_data_preprocessing_module/: README_CN.md
growthpath/junior-level/6_sample_debugging/: README_CN.md
growthpath/junior-level/7_sample_explanation/: README_CN.md
inference/: README.md
inference/ACLHelloWorld/src/: main.cpp
inference/LlmAirModelInference/: README.md
inference/LlmAirModelInference/config/: config.txt  hccl_8p.json
inference/LlmAirModelInference/cplusplus/: CMakeLists.txt  README.md
inference/LlmAirModelInference/cplusplus/src/: llm_config.cpp  llm_config.h  main.cpp  utils.cpp  utils.h
inference/acllite/: README.md
inference/acllite/python/: acllite_imageproc.py
inference/contributeSamples/contrib/: README_CN.md
inference/dataflow/cpluscplus/: CMakeLists.txt  README.md  node_builder.h  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample6.cpp  test_perf.cpp
inference/dataflow/cpluscplus/config/: add_func.json  add_func_multi.json  add_func_multi_control.json  add_graph.json  data_flow_deploy_info.json  invoke_func.json
inference/dataflow/python/: README.md  sample1.py  sample2.py  sample3.py  test_perf.py
inference/dataflow/python/udf_py_ws_sample/: CMakeLists.txt  func_add.json
inference/dataflow/python/udf_py_ws_sample/src_cpp/: func_add.cpp
inference/dataflow/python/udf_py_ws_sample/src_python/: func_add.py
inference/dataflow/udf_workspace/: README.md
inference/dataflow/udf_workspace/02_udf_call_add_nn/: CMakeLists.txt  call_nn_flow_func.cpp
inference/modelInference/sampleCarColor/: README.md
inference/modelInference/sampleCrowdCounting/: README.md
operator/: .clang-format  README.md
operator/AddCustomSample/: README.md
operator/AddNCustomSample/: README.md
operator/BroadcastCustomSample/: README.md
operator/HelloWorldSample/: CMakeLists.txt  README.md
operator/LeakyReluCustomSample/: README.md
operator/MatmulCustomSample/: README.md
operator/MatmulLeakyReluCustomSample/: README.md
operator/ReduceSample/: README.md
operator_contrib/: README.md
operator_contrib/AddcdivCustomSample/: README.en.md  README.md
operator_contrib/AddcmulSample/: README.en.md  README.md
operator_contrib/ClipByValueSample/: README.en.md  README.md
operator_contrib/CrossSample/: README.en.md  README.md
operator_contrib/FastGeluGradSample/: README.en.md  README.md
operator_contrib/GreaterEqualSample/: README.en.md  README.md
operator_contrib/InstanceNormSample/: README.en.md  README.md
operator_contrib/LayerNormCustomSample/: README.en.md  README.md
operator_contrib/LessEqualSample/: README.en.md  README.md
operator_contrib/LessEqualSample/KernelLaunch/LessEqualKernelInvocation/: CMakeLists.txt  README.en.md  README.md  less_equal.cpp  less_equal_tiling.h  main.cpp  run.sh
operator_contrib/LessEqualSample/KernelLaunch/LessEqualKernelInvocation/scripts/: gen_data.py
operator_contrib/LpNormV2CustomSample/: README.en.md  README.md
operator_contrib/MoeSoftMaxTopkCustomSample/: README.md
operator_contrib/MseLossGradSample/: README.en.md  README.md
operator_contrib/MseLossSample/: README.en.md  README.md
operator_contrib/PreLayerNormCustomSample/: README.en.md  README.md
operator_contrib/ScatterMaxSample/: README.en.md  README.md
operator_contrib/ScatterSubSample/: README.en.md  README.md
operator_contrib/SpenceSample/: README.en.md  README.md
operator_contrib/UnalignAddCustomSample/: README.en.md  README.md
python/: README.md  README_CN.md
python/common/: README.md  README_CN.md
python/contrib/: README.md
python/environment/: README.md
python/level1_single_api/: README.md  README_CN.md
python/level3_multi_model/: README.md  README_CN.md
robot/ascend_car/: readme.md
st/: README.md  README_CN.md
(+781 files in other folders)
